crates/pgls_pretty_print/tests/snapshots/multi/tests__20230508165641_packages_order_version_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20230508165641_packages_order_version.sql
---
create or replace view public.packages
as select
  pa.id,
  pa.package_name,
  pa.handle,
  pa.partial_name,
  newest_ver.version as latest_version,
  newest_ver.description_md,
  pa.control_description,
  pa.control_requires,
  pa.created_at
from
  app.packages as pa,
  lateral (
    select
      *
    from
      app.package_versions as pv
    where
      pv.package_id = pa.id
    order by pv.version_struct desc
    limit 1
  )
  as newest_ver;
